# laserscan_clusters

./: CMakeLists.txt  README.md  package.xml
config/: default.yaml
launch/: example.launch  generate_obstacles.py
src/: laserscan_clusters.cpp  lidar_sim.cpp
