<?xml version="1.0"?>
<package format="2">
  <name>laserscan_clusters</name>
  <version>1.0.0</version>
  <description>lidar_simulator</description>

  <maintainer email="manuel.boldrer@fel.cvut.cz">Manuel Boldrer</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>visualization_msgs</depend>
</package>
